# fiken-mcp

./: .env.example  Makefile  README.md  pyproject.toml  sbom.cdx.json
src/fiken_mcp/: client.py  config.py  errors.py  server.py
src/fiken_mcp/tools/: accounts.py  company.py  contacts.py  credit_notes.py  invoices.py  journal.py  products.py  projects.py  purchases.py  sales.py  time_tracking.py
