[project]
name = "fiken-mcp"
version = "0.1.0"
description = "MCP server wrapping the Fiken accounting API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.scripts]
fiken-mcp = "fiken_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
